k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapi
  labels:
    app.kubernetes.io/name: testapi
spec:
  ports:
  - port: 8080
  selector:
    app.kubernetes.io/name: testapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapi
  labels:
    app.kubernetes.io/name: testapi
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: testapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: testapi
    spec:
      containers:
        - name: testapi
          image: phaesoo/testapi
